[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-html = "0.1.6"

rfd = "0.5"

ide = {package = "ra_ap_ide", version = "0.0.94"}
vfs = {package = "ra_ap_vfs", version = "0.0.94"}
syntax = {package = "ra_ap_syntax", version = "0.0.94"}
ra_ap_cfg = "0.0.94"
ra_ap_base_db = "0.0.94"

serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# rink = { git = "https://github.com/DioxusLabs/rink.git" }
rink = { path = "./rink" }
dioxus = { version = "0.1.8", features = ["desktop"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.1.8", features = ["web"] }
