[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-html = "0.1.6"

rfd = "0.5"

serde = { version = "1", features = ["derive"] }

# lsp-types = "0.92.0"

syntect = { version = "4.6", default-features = false, features = ["default-fancy"]}

ropey = "1.3.2"

lazy_static = "1.4.0"

web-sys = "0.3.56"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# rink = { git = "https://github.com/DioxusLabs/rink" }
rink = { path = "../rink" }
dioxus = { version = "0.1.8", features = ["desktop"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.1.8", features = ["web"] }

[features]
term = []